# engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
modules/minitrace/: CMakeLists.txt
modules/nlohmann/: CMakeLists.txt  json.hpp
src/: CMakeLists.txt  CmakeLists.txt
src/camera/: camera.cpp  camera.h  perspective_camera.cpp  perspective_camera.h
src/common/input/: input_handler.cpp  input_handler.h  input_key.cpp  input_key.h  input_key_combination.cpp  input_key_combination.h  input_manager.cpp  input_manager.h
src/common/logger/: logger.cpp  logger.h
src/common/profiler/: tracer.cpp  tracer.h
src/common/utils/: utils.h
src/component/: component.cpp  component.h
src/component/emit/: emit.cpp  emit.h
src/component/material/: material.cpp  material.h
src/component/view/: view.cpp  view.h
src/entity/: entity.cpp  entity.h  entity_id.cpp  entity_id.h
src/entity/camera/: camera.cpp  camera.h  perspective_camera.cpp  perspective_camera.h
src/entity/camera/perspective/: perspective_camera.cpp  perspective_camera.h
src/entity/component/: component.cpp  component.h
src/entity/entity_id/: entity_id.cpp  entity_id.h
src/entity/geometry/: object.cpp  object.h
src/entity/light/: light.cpp  light.h
src/entity/mesh/: mesh.cpp  mesh.h
src/entity/object/: object.cpp  object.h
src/event/: event_manager.cpp  event_manager.h
src/geometry/: object.cpp  object.h  quad.cpp  quad.h  triangle.cpp  triangle.h
src/input/: input_handler.cpp  input_handler.h  input_key.cpp  input_key.h
src/material/: material.cpp  material.h
src/scene/: scene.cpp  scene.h
src/scene/gizmo/: gizmo.cpp  gizmo.h
src/scene/grid/: grid.cpp  grid.h
src/scene/orientation/: orientation.cpp  orientation.h
src/scene/system/: scene_manager.cpp  scene_manager.h
src/shaders/camera/: fragmentShader.shader  vertexShader.shader
src/shaders/gizmo/: fragmentShader.shader  vertexShader.shader
src/shaders/infinite_grid/: fragmentShader.shader  vertexShader.shader
src/shaders/light/: fragmentShader.shader  vertexShader.shader
src/shaders/orientation/: fragmentShader.shader  vertexShader.shader
src/shaders/pick/: fragmentShader.shader  vertexShader.shader
src/shaders/selected/: fragmentShader.shader  vertexShader.shader
src/shaders/simple_color/: fragmentShader.shader  vertexShader.shader
src/shaders/triangle/: fragmentShader.shader  vertexShader.shader
src/ui/: ui.cpp  ui.h  ui_element.h
src/utils/: utils.cpp  utils.h
src/window/: window.cpp  window.h
(+18 files in other folders)
